lib/src/compiler/tests/testdata/errors/82.out
error[E001]: syntax error
 --> line:3:10
  |
3 |   $a = { [-] 01 02 }
  |          ^ expecting BYTE or `(`, found `[`
  |